# azure-c-testrunnerswitcher

./: CMakeLists.txt  readme.md
jenkins/: linux_c.sh  osx_c.sh  ubuntu_clang.sh  windows_c.cmd  windows_vs2008_c.cmd
